--- a/speakers/c6_sampson.html
+++ b/speakers/c6_sampson.html
@@ -72,7 +72,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; 2024, Daniel Olson</p>
 	</footer>
 </body>
 </html>
